syntax = "proto3";

package pb;

import "member.proto";

option go_package = "github.com/YuanData/aquatrade/pb";

message CreateMemberRequest {
    string membername = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateMemberResponse {
    Member member = 1;
}